Food bank form and registration created
Created add food bank form. Created registerFoodBanks (modified copy of register.php) to handle taking in form value and pass them to addPerson

--- a/css/base.css
+++ b/css/base.css
@@ -221,7 +221,7 @@ main:not(.login):not(.calendar-view):not(.dashboard) {
 
 /* Form Controls */
 
-input[type=text], input[type=password], input[type=date], input[type=email], input[type=number], 
+input[type=text], input[type=textarea], input[type=password], input[type=date], input[type=email], input[type=number], 
 input[type=tel], select, textarea, .pseudo-input, .pseudo-input-disabled {
     border: var(--text-field-border);
     border-radius: 0;
@@ -232,16 +232,17 @@ input[type=tel], select, textarea, .pseudo-input, .pseudo-input-disabled {
     scroll-margin: 7.5rem;
 }
 
-input[type=text]:disabled, input[type=password]:disabled, input[type=date]:disabled, input[type=number]:disabled,
+input[type=text]:disabled, input[type=textarea]:disabled, input[type=password]:disabled, input[type=date]:disabled, input[type=number]:disabled,
 input[type=email]:disabled, input[type=tel]:disabled, select:disabled, textarea:disabled,
 .pseudo-input-disabled {
     background-color: var(--inactive-background-color);
     color: var(--inactive-font-color);
 }
 
-input[type=text]:focus, input[type=password]:active, input[type=email]:focus, input[type=date]:focus, input[type=tel]:focus, input[type=number]:focus, select:active, textarea:focus {
+input[type=text]:focus, input[type=textarea]:focus, input[type=password]:active, input[type=email]:focus, input[type=date]:focus, input[type=tel]:focus, input[type=number]:focus, select:active, textarea:focus {
     outline: var(--text-field-border);
 }
+
 
 input[type=submit], button, .button {
     color: var(--button-font-color);
